[package]
name = "rtm-auth"
version = "0.1.0"
edition = "2021"
authors = ["Daniil Trotsenko <daniil.trotsenko.dev@gmail.com>"]

[dependencies]
tokio = { version = "1.39", features = ["full"]}

config = "0.14.0"
clap = { version = "4.5.16", features = ["derive"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"

derive_more = "1.0.0"
num_cpus = "1.0"

regex = "1.10.6"
argon2 = "0.5.3"

# docs
utoipa = {version = "4.2.3", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "7.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }


axum = "0.7.5"
tower = {version = "0.4.13", features = ["full"]}
tower-http = { version = "0.5.2", features = ["full"] }

chrono = {version = "0.4", features = ["serde"]}

uuid7 = { version = "1.0.0", features = ["uuid", "serde"] }
uuid = "1.10.0"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2.5"

sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "migrate", "offline"] }

[profile.dev-mode]
inherits = "dev"
incremental = false

[profile.dev-ci]
inherits = "dev-mode"
strip = true

[profile.dev-ci-checks-off]
inherits = "dev-ci"
debug = false
debug-assertions = false
overflow-checks = false

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-thin-lto]
inherits = "release"
strip = true
lto = "thin"

[profile.release-opt-2]
inherits = "release"
opt-level = 2

[profile.release-opt-2-thin-lto]
inherits = "release-opt-2"
strip = true
lto = "thin"

[profile.release-opt3-thin-lto]
inherits = "release"
opt-level = 3
strip = true
lto = "thin"

[profile.release-opt-3]
inherits = "release"
opt-level = 3
strip = true
lto = false
codegen-units = 1

[profile.release-opt-3-lto]
inherits = "release-opt-3"
lto = true
